@startuml

title __PROJPOO's Class Diagram__\n

  namespace  {
    class AceitaEncomenda {
    }
  }
  

  namespace  {
    class Codigos {
    }
  }
  

  namespace  {
    class Encomenda {
    }
  }
  

  namespace  {
    class GPS {
    }
  }
  

  namespace  {
    class LinhaEncomenda {
    }
  }
  

  namespace  {
    class Loja {
    }
  }
  

  namespace  {
    class Transportadora {
    }
  }
  

  namespace  {
    class Utilizador {
    }
  }
  

  namespace  {
    class Voluntario {
    }
  }
  

  Loja o-- GPS : g
  Transportadora o-- GPS : g
  Utilizador o-- GPS : g
  Voluntario o-- GPS : g


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
